# SEANewsAlert

./: .env.example  ARCHITECTURE.md  CHECKLIST.md  DELIVERY.md  DEPLOYMENT.md  DIVERSITY_OPTIMIZATION.md  Dockerfile  EXAMPLES.md  EXCEL_UPDATE.md  EXCEL_新增欄位說明.md  Excel功能調整完成總結.md  FASTAPI_DELIVERY_SUMMARY.md  FILES_LIST.md  FRONTEND_SIMPLIFICATION.md  HOW_TO_START.md  LANGUAGE_FEATURE.md  LANGUAGE_QUICKREF.md  MARKDOWN_PDF_分析報告.md  PDF_格式修復說明.md  PRODUCTION.md  PROJECT_SUMMARY.md  QUICKSTART-API.md  QUICKSTART.md  README-API.md  README.md  README_分析文檔說明.txt  REBUILD-VENV.bat  START-API-FIX.bat  START-API.ps1  START-FAST.bat  START.ps1  TROUBLESHOOTING.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  start-api-simple.bat  start-api.bat  start-api.sh  (+21 more)
agents/: analyst_agent.py  email_agent.py  report_agent.py  research_agent.py
app/: main.py
boot-script/: START-ALL.bat
docs/: ARCHITECTURE.md
reports/: ~$真實測試_含摘要分析.xlsx  完整測試_中文標題驗證.xlsx  東南亞金融新聞報告_20251013_142340.xlsx  東南亞金融新聞報告_20251013_145921.xlsx  東南亞金融新聞報告_20251013_151715.xlsx  東南亞金融新聞報告_20251013_163913.xlsx  東南亞金融新聞報告_20251013_170227.xlsx  東南亞金融新聞報告_20251016_095913.xlsx  東南亞金融新聞報告_20251016_120005.xlsx  東南亞金融新聞報告_20251016_122143.xlsx  東南亞金融新聞報告_20251016_125815.xlsx  東南亞金融新聞報告_20251016_142204.xlsx  東南亞金融新聞報告_20251016_144406.xlsx  東南亞金融新聞報告_20251016_150521.xlsx  東南亞金融新聞報告_20251016_151448.xlsx  東南亞金融新聞報告_20251016_152544.xlsx  東南亞金融新聞報告_20251016_161713.xlsx  東南亞金融新聞報告_20251016_162942.xlsx  東南亞金融新聞報告_20251017_094153.xlsx  東南亞金融新聞報告_20251017_113800.xlsx  東南亞金融新聞報告_20251027_101000.xlsx  (+11 more)
